@@ -1,8 +1,4 @@
 from django.conf.urls.defaults import *
-from django.contrib import admin
-admin.autodiscover()
-
-# Uncomment the next two lines to enable the admin:
 
 urlpatterns = patterns('',
     # Example:
@@ -13,5 +9,4 @@ urlpatterns = patterns('',
     # (r'^admin/doc/', include('django.contrib.admindocs.urls')),
 
     # Uncomment the next line to enable the admin:
-    (r'^admin/(.*)', admin.site.root),
 )
